Alterei o package.json apontando de index.js para app.js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Simple hello world sample in Node",
   "version": "1.0.0",
   "private": true,
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node index.js"
   },
