--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "engines": {
     "node": ">= 12.0.0"
   },
-  "author": "Google LLC",
+  "author": "CHC",
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.17.2"
